--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,1 +1,6 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+
+alexey:
+  name: Alexey Example
+  email: michael@example.com
+  password_digest: <%= User.digest('password') %>
