--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -2,5 +2,28 @@
 
 alexey:
   name: Alexey Example
-  email: michael@example.com
+  email: alexey@example.com
   password_digest: <%= User.digest('password') %>
+  admin: true
+
+petya:
+  name: Petya Petrov
+  email: petya@example.com
+  password_digest: <%= User.digest('password') %>
+
+lana:
+  name: Lana Kane
+  email: hands@example.gov
+  password_digest: <%= User.digest('password') %>
+
+mallory:
+  name: Mallory Archer
+  email: boss@example.gov
+  password_digest: <%= User.digest('password') %>
+
+<% 30.times do |n| %>
+user_<%= n %>:
+  name:  <%= "User #{n}" %>
+  email: <%= "user-#{n}@example.com" %>
+  password_digest: <%= User.digest('password') %>
+<% end %>
