--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -29,6 +29,13 @@ mallory:
   activated: true
   activated_at: <%= Time.zone.now %>
 
+non_activated:
+  name: Non Ativated
+  email: non-activated@example.gov
+  password_digest: <%= User.digest('password') %>
+  activated: false
+  activated_at: <%= nil %>
+
 <% 30.times do |n| %>
 user_<%= n %>:
   name:  <%= "User #{n}" %>
